converterテストの修正とconverterメソッドをpublicに修正